Fix for Bug# 21409. At low transaction isolation levels we let each consistent read set its own snapshot