handler/ha_innodb.cc
@@ -6856,6 +6856,16 @@ ha_innobase::store_lock(
 		trx->isolation_level = innobase_map_isolation_level(
 						(enum_tx_isolation)
 						thd->variables.tx_isolation);
+
+		if (trx->isolation_level <= TRX_ISO_READ_COMMITTED
+		    && trx->global_read_view) {
+
+			/* At low transaction isolation levels we let
+			each consistent read set its own snapshot */
+
+			read_view_close_for_mysql(trx);
+		}
+
 	}
 
 	const bool in_lock_tables = thd_in_lock_tables(thd);
